@@ -1,0 +1,1 @@
+<Projects><% @projects.each do |project| %><Project name="<%= project.name %>" category="" activity="<%= map_build_activity_to_ccnet_activity(project.builder_activity) %>" lastBuildStatus="<%= map_project_status_to_ccnet_project_status(project.last_build.status) %>" lastBuildLabel="<%= project.last_build.label %>" lastBuildTime="<%= format_time(project.last_build.time, :round_trip_local) %>" nextBuildTime="<%= format_time(project.last_build.time, :round_trip_local) %>" webUrl="http://localhost:3333"/><% end %></Projects>
