@@ -4,6 +4,7 @@ TRUNK
     notifies all other plugins, then raises an error of its own (thus triggering the build_loop_failed event)
   - improved error handling during builder initialization
   - builder status - not running, running(building | sleeping | checking for modifications | error)
+  - initial steps to allow monitoring of cruisecontrol.rb using CCTray.net
 --------------------------------------------------------------------------------
 * 0.3.0
   - builder is building 'cruise', 'test' or 'default' target, depending on what is defined in the project
